SYDDK-491 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
@@ -26,7 +26,10 @@ img {
 }
 
 .icon {
-    @extend .fa; // Extend Font Awesome, so .icon can be used instead (or switched out)
+
+    &:not(.glyphicon) {
+        @extend .fa; // Extend Font Awesome, so .icon can be used instead (or switched out)
+    }
 }
 
 .form-control {
