SYDDK-491 - panels layout

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
@@ -64,7 +64,10 @@ $flexy-navigation-dropdown-menu-toggle-width: 60px;
 .flexy-navigation__item__dropdown-menu__toggle {
   position: absolute;
 
-  display: flex;
+  &,
+  &.fa {
+    display: flex;
+  }
 
   cursor: pointer;
   cursor: hand;
