--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
@@ -57,6 +57,8 @@ img {
     }
 }
 
+.btn-default {}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
