--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
@@ -147,11 +147,11 @@ $table-border-color:            #ddd !default;
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-$btn-font-weight:                normal !default;
+$btn-font-weight:                $font-weight-bold;
 
-$btn-default-color:              #333 !default;
-$btn-default-bg:                 #fff !default;
-$btn-default-border:             #ccc !default;
+$btn-default-color:              $text-color;
+$btn-default-bg:                 #f1f1f1;
+$btn-default-border:             transparent;
 
 $btn-primary-color:              $text-color;
 $btn-primary-bg:                 $brand-primary !default;
