--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -771,6 +771,7 @@ img.main-navigation-logo-image {
 }
 
 .node-header {
+    
     &.with-spots .views-row {
         position: relative;
         min-height: 194px;
@@ -778,26 +779,33 @@ img.main-navigation-logo-image {
         border-radius: @border-radius-base;
         border: 2px solid #b3b3b3;
         overflow: hidden;
+        
+        padding: 10px 15px;
+    
         img {
-            float: left;
-            max-width: 50%;
+            width: 100%;
+            height: auto;
+    
+            border-radius: @border-radius-base;
         }
-        .views-field-field-os2web-base-field-image {
-            position: absolute;
-            top: 0;
-            left: 0;
+        
+        p {
+            margin-bottom: 0;
+        }
+    
+        // Tablet - and up
+        @media @media-query-tablet {
+    
             img {
-                width: 50%;
-                height: auto;
-                border-radius: 4px;
-                border-top-left-radius: @border-radius-base;
-                border-bottom-left-radius: @border-radius-base;
                 float: left;
+        
+                width: 50%;
             }
-        }
-        p, h1 {
-            width: 44%;
-            margin-left: 54%;
+    
+            p, h1 {
+                width: 44%;
+                margin-left: 54%;
+            }
         }
     }
 }
