SYDDK-505 - mobile buttons
Remove menu toggle

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -563,10 +563,12 @@ img.main-navigation-logo-image {
 
 .simple-navigation-logo-link {
     color: #333;
-    text-align: left;
     font-size: @font-size-large;
-    display: block;
-    margin-left: 55px;
+    
+    img {
+        max-width: 70%;
+    }
+    
     &:hover {
         color: #dedede
     }
