--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_banner.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_banner.scss
@@ -81,14 +81,31 @@
 // Tablet - and up
 @media #{$breakpoint-tablet-and-up} {
 
-  .sectioned--banner {
+  .front {
 
-    .sectioned__inner {
-      min-height: 400px;
+    .sectioned--banner {
+
+      .sectioned__inner {
+        min-height: 400px;
+      }
+
+      .field-name-field-banner-headline {
+        font-size: 70px;
+      }
     }
+  }
 
-    .field-name-field-banner-headline {
-      font-size: 70px;
+  .not-front {
+
+    .sectioned--banner {
+
+      .sectioned__inner {
+        min-height: 400px;
+      }
+
+      .field-name-field-banner-headline {
+        font-size: 56px;
+      }
     }
   }
 }
