SYDDK-responsive navigation

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
@@ -5,7 +5,8 @@
 @import "flexy-navigation";
 @import "layout";
 @import "sidr";
-@import "slinky-menu";
+// @import "slinky-menu";
+@import "sidebar";
 @import "footer";
 @import "breadcrumb";
 @import "carousel";
