--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_sidebar.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_sidebar.scss
@@ -1,27 +1,27 @@
 @media screen and (max-width: 767px) {
-  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > li a .fa {
+  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > .menu > li a .fa {
     float: left;
     margin-left: -25px;
   }
-  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > li > a {
+  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > .menu > li > a {
     font-size: 14px;
     line-height: 20px;
-    padding-left: 35px;
+    padding-left: 15px;
     padding-top: 12px;
     padding-bottom: 12px;
   }
-  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > li > a .fa {
+  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > .menu > li > a .fa {
     font-size: 18px;
     line-height: inherit;
   }
-  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > li > ul > li > a {
-    padding-left: 45px;
+  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > .menu > li > ul > li > a {
+    padding-left: 30px;
   }
-  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > li > ul > li > ul > li > a {
-    padding-left: 55px;
+  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > .menu > li > ul > li > ul > li > a {
+    padding-left: 40px;
   }
-  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > li > ul > li > ul > li > ul > li > a {
-    padding-left: 65px;
+  .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation > .menu > li > ul > li > ul > li > ul > li > a {
+    padding-left: 50px;
   }
   .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation .sidebar-navigation-dropdown > a {
     position: relative;
@@ -37,7 +37,7 @@
   .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation .sidebar-navigation-dropdown.active,
   .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation .sidebar-navigation-dropdown.active-trail {
     background-color: #004a80;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1) !important;
   }
   .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation .sidebar-navigation-dropdown.active > a,
   .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation .sidebar-navigation-dropdown.active-trail > a,
@@ -77,7 +77,7 @@
     bottom: 0;
     right: 0;
     background-color: #004a80;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1) !important;
     text-align: center;
   }
   .sidebar-left-enabled-xs.sidebar-left-hidden-xs .sidebar-navigation .sidebar-navigation-dropdown-toggle:before {
@@ -96,29 +96,29 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
-  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > li a .fa {
+  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > .menu > li a .fa {
     float: left;
     margin-left: -25px;
   }
-  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > li > a {
+  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > .menu > li > a {
     font-size: 14px;
     line-height: 20px;
-    padding-left: 35px;
+    padding-left: 15px;
     padding-top: 12px;
     padding-bottom: 12px;
   }
-  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > li > a .fa {
+  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > .menu > li > a .fa {
     font-size: 18px;
     line-height: inherit;
   }
-  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > li > ul > li > a {
-    padding-left: 45px;
+  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > .menu > li > ul > li > a {
+    padding-left: 30px;
   }
-  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > li > ul > li > ul > li > a {
-    padding-left: 55px;
+  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > .menu > li > ul > li > ul > li > a {
+    padding-left: 40px;
   }
-  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > li > ul > li > ul > li > ul > li > a {
-    padding-left: 65px;
+  .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation > .menu > li > ul > li > ul > li > ul > li > a {
+    padding-left: 50px;
   }
   .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation .sidebar-navigation-dropdown > a {
     position: relative;
@@ -134,7 +134,7 @@
   .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation .sidebar-navigation-dropdown.active,
   .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation .sidebar-navigation-dropdown.active-trail {
     background-color: #004a80;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1) !important;
   }
   .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation .sidebar-navigation-dropdown.active > a,
   .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation .sidebar-navigation-dropdown.active-trail > a,
@@ -174,7 +174,7 @@
     bottom: 0;
     right: 0;
     background-color: #004a80;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1) !important;
     text-align: center;
   }
   .sidebar-left-enabled-sm.sidebar-left-hidden-sm .sidebar-navigation .sidebar-navigation-dropdown-toggle:before {
@@ -218,7 +218,7 @@
 .sidebar-navigation a:hover {
   color: #ffffff;
   background-color: #005c9e;
-  background-color: rgba(255, 255, 255, 0.03);
+  background-color: rgba(255, 255, 255, 0.03) !important;
 }
 .sidebar-navigation a:hover .fa {
   color: #ffffff;
@@ -233,7 +233,7 @@
 .sidebar-navigation a.active {
   color: $brand-primary;
   background-color: #004a80;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1) !important;
 }
 .sidebar-navigation a.active .fa {
   color: $brand-primary;
