--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/_vendor.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/_vendor.scss
@@ -1,5 +1,5 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "../../node_modules/font-awesome/scss/font-awesome";
+//@import "../../node_modules/font-awesome/scss/font-awesome";
 
 @import "../../node_modules/readable-bootstrap-breakpoints/scss/readable-bootstrap-breakpoints";
 @import "../../node_modules/column-restrictor/scss/column-restrictor";
