--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_font-awesome.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_font-awesome.scss
@@ -1,3 +1,3 @@
-$fa-font-path: $font-path;
+$fa-font-path:        "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts" !default; // for referencing Bootstrap CDN font files directly
 
 @import "../../../node_modules/font-awesome/scss/variables";
