--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_banner.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_banner.scss
@@ -25,12 +25,12 @@
   .sectioned__inner {
     min-height: 300px;
 
-    background-color: transparent;
-    background-image: linear-gradient(
-                    to right,
-                    rgba(27, 62, 70, .6) 40%,
-                    transparent 65%
-    );
+    //background-color: transparent;
+    //background-image: linear-gradient(
+    //                to right,
+    //                rgba(27, 62, 70, .6) 40%,
+    //                transparent 65%
+    //);
   }
 
   .field-name-field-banner-headline {
