--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_flexy-navigation.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_flexy-navigation.scss
@@ -8,7 +8,7 @@ $flexy-navigation-item-link-font-color: $text-color !default;
 $flexy-navigation-item-link-background-color: transparent !default;
 
 $flexy-navigation-item-link-hover-font-color: $text-color !default;
-$flexy-navigation-item-link-hover-background-color: transparent !default;
+$flexy-navigation-item-link-hover-background-color: $body-bg-secondary;
 
 $flexy-navigation-item-active-link-font-color: $brand-primary !default;
 $flexy-navigation-item-active-link-background-color: transparent !default;
