--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
@@ -318,7 +318,7 @@
     margin-top: 10px;
     padding: 10px 15px;
 
-    border: 2px solid $border-color-dark;
+    border: 2px solid #3a3a3a;
     border-radius: $border-radius-base;
 
     .views-widget-filter-date_filter {
