--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_carousel.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_carousel.scss
@@ -25,6 +25,7 @@ $carousel-overlay-color: #1b3e46;
 .carousel {}
 
 .carousel-control {
+  background-image: none !important;
 
   .icon-prev,
   .icon-next {
