--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_flexy-navigation.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_flexy-navigation.scss
@@ -7,8 +7,8 @@ $flexy-navigation-item-link-font-weight: $font-weight-bold !default;
 $flexy-navigation-item-link-font-color: $text-color !default;
 $flexy-navigation-item-link-background-color: transparent !default;
 
-$flexy-navigation-item-link-hover-font-color: $text-color !default;
-$flexy-navigation-item-link-hover-background-color: $body-bg-secondary;
+$flexy-navigation-item-link-hover-font-color: #fff;
+$flexy-navigation-item-link-hover-background-color: $text-color;
 
 $flexy-navigation-item-active-link-font-color: $brand-primary !default;
 $flexy-navigation-item-active-link-background-color: transparent !default;
