--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
@@ -223,6 +223,8 @@
 
         position: absolute;
 
+        z-index: 0;
+
         right: 20px;
         top: 10px;
 
@@ -234,6 +236,9 @@
     }
 
     .form-control {
+      position: relative;
+      z-index: 10;
+
       padding-left: 0;
       padding-right: 20px; // the width of the icon
 
