--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
@@ -215,7 +215,9 @@
     }
 
     .form-item-date-filter-min-date,
-    .form-item-date-filter-max-date {
+    .form-item-dato-min-date,
+    .form-item-date-filter-max-date,
+    .form-item-dato-max-date {
       position: relative;
 
       &:after {
