--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_social-icon.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_social-icon.scss
@@ -10,8 +10,8 @@
 // Variables
 // --------------------------------------------------
 
-$social-icon-height: 34px;
-$social-icon-width: 34px;
+$social-icon-height: 28px;
+$social-icon-width: 28px;
 
 // --------------------------------------------------
 // Mixins
@@ -32,16 +32,18 @@ $social-icon-width: 34px;
   height: $social-icon-height;
   width: $social-icon-width;
 
-  border-radius: $border-radius-base;
+  background-color: #fff;
+
+  border-radius: 100%;
 
   &:hover {
     text-decoration: none;
   }
 
   .icon {
-    font-size: 20px;
+    font-size: 18px;
 
-    color: #fff;
+    color: $body-bg-tertiary;
   }
 }
 
@@ -49,37 +51,37 @@ $social-icon-width: 34px;
 // Variants
 // --------------------------------------------------
 
-.social-icon--facebook {
-  background-color: $social-link-color-facebook;
-}
-
-.social-icon--twitter {
-  background-color: $social-link-color-twitter;
-}
-
-.social-icon--google-plus {
-  background-color: $social-link-color-google-plus;
-}
-
-.social-icon--linkedin {
-  background-color: $social-link-color-linkedin;
-}
-
-.social-icon--pinterest {
-  background-color: $social-link-color-pinterest;
-}
-
-.social-icon--instagram {
-  background-color: $social-link-color-instagram;
-}
-
-.social-icon--youtube {
-  background-color: $social-link-color-youtube;
-}
-
-.social-icon--vimeo {
-  background-color: $social-link-color-vimeo;
-}
+//.social-icon--facebook {
+//  background-color: $social-link-color-facebook;
+//}
+//
+//.social-icon--twitter {
+//  background-color: $social-link-color-twitter;
+//}
+//
+//.social-icon--google-plus {
+//  background-color: $social-link-color-google-plus;
+//}
+//
+//.social-icon--linkedin {
+//  background-color: $social-link-color-linkedin;
+//}
+//
+//.social-icon--pinterest {
+//  background-color: $social-link-color-pinterest;
+//}
+//
+//.social-icon--instagram {
+//  background-color: $social-link-color-instagram;
+//}
+//
+//.social-icon--youtube {
+//  background-color: $social-link-color-youtube;
+//}
+//
+//.social-icon--vimeo {
+//  background-color: $social-link-color-vimeo;
+//}
 
 // --------------------------------------------------
 // Responsive
