Views exposed form

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_views-exposed-form.scss
@@ -75,6 +75,10 @@
     }
   }
 
+  .help-block {
+    @extend .sr-only;
+  }
+
   // The wrapper around all the checkboxes
   .form-control.form-checkboxes {
     height: auto;
