EVB-766-11982 "popup calendar" fixed.

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_page.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/page/_page.scss
@@ -19,7 +19,9 @@
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
-
+.ui-datepicker{
+  z-index: 9999 !important;
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
