SYDDK-594 - footer kultunaut logo

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
@@ -77,6 +77,21 @@
     height: 50px;
   }
 
+  + .sectioned--sitemap__kultunaut-logo {
+    margin-top: $grid-gutter-width;
+  }
+
+  + .sectioned--sitemap__description {
+    margin-top: $grid-gutter-width;
+  }
+}
+
+.sectioned--sitemap__kultunaut-logo {
+
+  img {
+    height: 38px;
+  }
+
   + .sectioned--sitemap__description {
     margin-top: $grid-gutter-width;
   }
