SYDDK-594 - footer kultunaut logo

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
@@ -86,6 +86,13 @@
   }
 }
 
+.social-icons {
+
+  + .sectioned--sitemap__kultunaut-logo {
+    margin-top: $grid-gutter-width;
+  }
+}
+
 .sectioned--sitemap__kultunaut-logo {
 
   img {
